Resource path improved